--- a/semantic-kernel-vetores/semantic-kernel-vetores.csproj
+++ b/semantic-kernel-vetores/semantic-kernel-vetores.csproj
@@ -9,8 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.KernelMemory" Version="0.98.250324.1" />
+    <PackageReference Include="Microsoft.KernelMemory.MemoryDb.Qdrant" Version="0.98.250324.1" />
     <PackageReference Include="Microsoft.SemanticKernel" Version="1.47.0" />
     <PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="1.47.0" />
+    <PackageReference Include="Qdrant.Client" Version="1.14.0" />
   </ItemGroup>
 
 </Project>
